After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 636750 - ./configure --with-minimum build failed
./configure --with-minimum build failed
Status: RESOLVED FIXED
Product: libxml2
Classification: Platform
Component: general
2.7.8
Other Linux
: Normal normal
: ---
Assigned To: Daniel Veillard
libxml QA maintainers
Depends on:
Blocks:
 
 
Reported: 2010-12-08 08:49 UTC by Anthony Liu
Modified: 2012-05-11 02:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for xmllint.c to mode #endif of LIBXML_OUTPUT_ENABLED down a couple of lines (481 bytes, patch)
2011-04-20 20:25 UTC, Brandon Slack
none Details | Review

Description Anthony Liu 2010-12-08 08:49:04 UTC
Building the library fails with the following message:


make[2]: Entering directory `/home/anthony/rtl/xml-data-binding/libxml2-2.7.8'
gcc -DHAVE_CONFIG_H -I. -I./include -I./include       -g -O2 -pedantic -W -Wformat -Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts -Wuninitialized -Wparentheses -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls -MT xmllint.o -MD -MP -MF .deps/xmllint.Tpo -c -o xmllint.o xmllint.c
xmllint.c: In function ‘main’:
xmllint.c:3353: error: ‘format’ undeclared (first use in this function)
xmllint.c:3353: error: (Each undeclared identifier is reported only once
xmllint.c:3353: error: for each function it appears in.)
make[2]: *** [xmllint.o] Error 1
make[2]: Leaving directory `/home/anthony/rtl/xml-data-binding/libxml2-2.7.8'
Comment 1 Brandon Slack 2011-04-20 20:25:25 UTC
Created attachment 186392 [details] [review]
Patch for xmllint.c to mode #endif of LIBXML_OUTPUT_ENABLED down a couple of lines

 #ifdef LIBXML_OUTPUT_ENABLED
 	     format = atoi(argv[i]);
#endif /* LIBXML_OUTPUT_ENABLED */
 	     if (format == 1) {
 	         noblanks++;
 	         xmlKeepBlanksDefault(0);
 	     }
 	}


becomes

 #ifdef LIBXML_OUTPUT_ENABLED
 	     format = atoi(argv[i]);
 	     if (format == 1) {
 	         noblanks++;
 	         xmlKeepBlanksDefault(0);
 	     }
+#endif /* LIBXML_OUTPUT_ENABLED */
 	}

as the format variable is not defined unless LIBXML_OUT_ENABLED is defined
Comment 2 André Klapper 2012-02-03 13:42:19 UTC
Comment on attachment 186392 [details] [review]
Patch for xmllint.c to mode #endif of LIBXML_OUTPUT_ENABLED down a couple of lines

[Setting "patch" flag and correcting mime type so this can actually be queried for.]
Comment 3 Daniel Veillard 2012-05-11 02:55:47 UTC
Thanks André !

Brandon, the patch is perfectly right, applied :-)

http://git.gnome.org/browse/libxml2/commit/?id=0c7109c81f3de1408ddac898bce0aa21823e3507

 thanks a lot !

Daniel